# genuiwar

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/rules/: 00_architecture.mdc  01_agent_behavior.mdc  02_evidence_discipline.mdc  03_coding_standards.mdc
apps/api/: README.md  dependencies.py  main.py
apps/web/: README.md  package.json  vitest.config.ts
apps/worker/: README.md  main.py
docs/: 00_project_mission.md  00_project_setup_checklist.md  01_system_architecture.md  02_agent_workflow.md  03_evidence_rules.md  04_ui_ux_contract.md  05_build_phases.md  06_repo_structure.md  07_run_event_schema.md  08_claim_ledger_schema.md  09_synthetic_data_strategy.md  10_clarification_policy.md  11_evaluation_and_red_teaming.md  12_api_contract_overview.md  13_first_cursor_build_brief.md  14_phase1_execution_plan.md  15_phase2_execution_plan.md  16_phase3_execution_plan.md  17_phase3_corrections_and_hardening.md  18_persistence_and_retrieval_roadmap.md  19_phase4_execution_plan.md  20_data_dictionary_and_identifier_rules.md  21_phase5_execution_plan.md  95_exact_changed_file_list.md  96_assumption_register.md  97_git_strategy.md  98_initial_execution_plan.md  99_cursor_understanding_report.md
infra/deployment/: README.md
infra/docker/: README.md  init-test-db.sql
infra/scripts/: README.md
tests/e2e/: README.md
tests/integration/: README.md
tests/unit/: conftest.py  test_adjudicator.py  test_calc_aggregation.py  test_calc_api.py  test_calc_arithmetic.py  (+28 more)
(+47 files in other folders)
